Fixes collapsing card-holder

--- a/client/src/app/components/cards/cards.scss
+++ b/client/src/app/components/cards/cards.scss
@@ -1,3 +1,8 @@
+.card-holder {
+  width: 100%;
+  @include clearfix;
+}
+
 .cp-card {
   background-position: center top;
   background-size: cover;
