--- a/client/src/app/components/top-nav/top-nav.scss
+++ b/client/src/app/components/top-nav/top-nav.scss
@@ -15,7 +15,7 @@
 
   .logo {
     width: auto;
-    padding: 9px 0 8px;
+    padding: 6px 0;
     cursor: pointer;
     float: left;
     width: 55%;
